--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -121,6 +121,7 @@
     <div class="popupWindowWrapper" id="popupPSPLUS">
         <p>
             <div class="popupWindow">
+                <button class="closebutton" onclick="javascript:psnPopupHide()"></button>
                 <img src="src/psplus.png">
                 <h2>PS Plus Premium</h2>
 
@@ -147,42 +148,41 @@
 
     <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
     <script>
-        $(document).ready(function(){
-            // Скрыть PopUp при загрузке страницы    
-            psnPopupHide();
-            function hasTouch() {
-  return 'ontouchstart' in document.documentElement
-         || navigator.maxTouchPoints > 0
-         || navigator.msMaxTouchPoints > 0;
-}
-
-if (hasTouch()) { // remove all the :hover stylesheets
-  try { // prevent exception on browsers not supporting DOM styleSheets properly
-    for (var si in document.styleSheets) {
-      var styleSheet = document.styleSheets[si];
-      if (!styleSheet.rules) continue;
-
-      for (var ri = styleSheet.rules.length - 1; ri >= 0; ri--) {
-        if (!styleSheet.rules[ri].selectorText) continue;
-
-        if (styleSheet.rules[ri].selectorText.match(':hover')) {
-          styleSheet.deleteRule(ri);
-        }
-      }
+    $(document).ready(function(){   
+        psnPopupHide();
+        function hasTouch() {
+    return 'ontouchstart' in document.documentElement
+            || navigator.maxTouchPoints > 0
+            || navigator.msMaxTouchPoints > 0;
     }
-  } catch (ex) {}
-}
-        });
-        // Функция отображения PopUp
-        function psnPopupShow(){
-            $("#popupPSPLUS").show();
-            $("#overlay").show();
+
+    if (hasTouch()) {
+    try {
+        for (var si in document.styleSheets) {
+        var styleSheet = document.styleSheets[si];
+        if (!styleSheet.rules) continue;
+
+        for (var ri = styleSheet.rules.length - 1; ri >= 0; ri--) {
+            if (!styleSheet.rules[ri].selectorText) continue;
+
+            if (styleSheet.rules[ri].selectorText.match(':hover')) {
+            styleSheet.deleteRule(ri);
+            }
         }
-        // Функция скрытия PopUp
-        function psnPopupHide(){
-            $("#popupPSPLUS").hide();
-            $("#overlay").hide();
         }
+    } catch (ex) {}
+    }
+            });
+            function psnPopupShow(){
+                $("#popupPSPLUS").show();
+                $("#overlay").show();
+            }
+            function psnPopupHide(){
+                $("#popupPSPLUS").hide();
+                $("#overlay").hide();
+            }
     </script>
+
+
 </body>
 </html>
