--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -160,7 +160,22 @@
             // send some string back
             alert("button clicked");
             alert(`WHOA HELLOW MR. ${tg.initDataUnsafe.user.first_name}, your id is: ${tg.initDataUnsafe.user.id}`);
-            tg.sendData(`WHOA HELLOW MR. ${tg.initDataUnsafe.user.first_name}, your id is: ${tg.initDataUnsafe.user.id}`);
+            alert("starting fetch");
+            fetch('http://37.193.159.183:9999/request', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    type: 'buy',
+                    user_id: tg.initDataUnsafe.user.id,
+                }),
+                })
+                .then(response => alert(response.json()))
+                .then(data => alert(data))
+                .catch(error => alert(error));
+            
+            alert("thats it");
         });
 
     </script>
