--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="code">
-        <img src="src/psplus.png">
+        <img src="src/psplus.jpg">
         <div class="info">
             Paystation Plus
         </div>
