--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -122,7 +122,7 @@
         <p>
             <div class="popupWindow">
                 <button class="closebutton" onclick="javascript:psnPopupHide()"></button>
-                <img src="src/psplus.png">
+                <img src="src/psn.jpeg">
                 <h2>PS Plus Premium</h2>
 
                 <div class="description">
