--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -169,7 +169,9 @@
                 'Content-Type': 'application/json'
             },
             data: JSON.stringify({
-                "type": 'buy',
+                type: 'buy',
+                length: null,
+                product: 'PSPLUS PREMIUM 3',
                 user_id: tg.initDataUnsafe.user.id,
             }),
             success: function(response) {
