--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -129,17 +129,14 @@
                     <label for="name">Расширенная подписка для PlayStation. В неё входит всё, что есть в PS Plus Essential, а ещё она откроет каталог с сотнями консольных хитов (будто Game Pass от Xbox).</label>
                 </div>
 
-                <button class="form-control">
-                    <label for="name">1 месяц</label>
-                </button>
+                <input type="radio" id="1month" name="subscription" value="1month" />
+                <label class="radio-wrapper" for="1month">1 месяц</label>
 
-                <button class="form-control">
-                    <label for="email">3 месяца</label>
-                </button>
+                <input type="radio" id="3month" name="subscription" value="3month" />
+                <label class="radio-wrapper" for="3month">3 месяца</label>
 
-                <button class="form-control">
-                    <label for="phone">12 месяцев</label>
-                </button>
+                <input type="radio" id="12month" name="subscription" value="12month" />
+                <label class="radio-wrapper" for="12month">12 месяцев</label>
 
                 <button class="form-control2" type="submit" id="PSPLUSBUY">КУПИТЬ</button>
         </div>
