--- a/server/web_front_container/index.html
+++ b/server/web_front_container/index.html
@@ -21,7 +21,7 @@
     </h2>
 
     <section class="games-list">
-        <div class="item">
+        <div class="item" onclick="javascript:NOnlinePopupShow()">
             <img src="src/Pack 1.jpg">
             <div class="info">
                 Zelda TOTK
@@ -31,18 +31,18 @@
             </div>
         </div>
 
-        <div class="item">
-            <img src="src/Pack 1.jpg">
+        <div class="item" onclick="javascript:NOnlinePopupShow()">
+            <img src="src/Pack_2.jpg">
             <div class="info">
-                Mario
+                Witcher 3
             </div>
             <div class="price">
                 400 ₽
             </div>
         </div>
 
-        <div class="item">
-            <img src="src/Pack 1.jpg">
+        <div class="item" onclick="javascript:Top10PopupShow()">
+            <img src="src/Pack_3.jpg">
             <div class="info">
                 Top 10 Games
             </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
             <img src="src/Pack 1.jpg">
             <div class="info">
                 Witcher
@@ -69,7 +69,7 @@
             <div class="price">
                 500 ₽
             </div>
-        </div>
+        </div> -->
         
     </section>
 
@@ -249,6 +249,33 @@
                 <label class="radio-wrapper" for="50dollar_steam">50$</label>
 
                 <button class="form-control2" type="submit" id="STEAMBUY">КУПИТЬ</button>
+        </div>
+        </p>
+    </div>
+
+    # всплывающее окно Top 10 games
+
+    <div class="popupWindowWrapper" id="popupTop10">
+        <p>
+            <div class="popupWindow">
+                <button class="closebutton" onclick="javascript:Top10PopupHide()"></button>
+                <img src="src/Pack_3.jpg">
+                <h2>Топ 10 игр на Nintendo Switch</h2>
+
+                <div class="description">
+                    <label for="name">10 самых популярных игр Nintendo Switch. Только отборные эксплюзивы и ААА проекты.</label>
+                </div>
+
+                <input type="radio" id="2week_Top10" name="paycode_steam" value="2week" />
+                <label class="radio-wrapper" for="2week_Top10">Две недели</label>
+
+                <input type="radio" id="1month_Top10" name="paycode_steam" value="1moth" />
+                <label class="radio-wrapper" for="1month_Top10">Месяц</label>
+
+                <input type="radio" id="2month_Top10" name="paycode_steam" value="2month" />
+                <label class="radio-wrapper" for="2month_Top10">Два месяца</label>
+
+                <button class="form-control2" type="submit" id="STEAMBUY">АРЕНДОВАТЬ</button>
         </div>
         </p>
     </div>
@@ -444,6 +471,7 @@
         NOnlinePopupHide();
         EshopPopupHide();
         SteamPopupHide();
+        Top10PopupHide();
         function hasTouch() {
     return 'ontouchstart' in document.documentElement
             || navigator.maxTouchPoints > 0
@@ -509,6 +537,15 @@
             }
             function SteamPopupHide(){
                 $("#popupSteam").hide();
+                $("#overlay").hide();
+            }
+
+            function Top10PopupShow(){
+                $("#popupTop10").show();
+                $("#overlay").show();
+            }
+            function Top10PopupHide(){
+                $("#popupTop10").hide();
                 $("#overlay").hide();
             }
     </script>
